2004-05-24 Ian Rutt
 * Sorted out input and output arrays of water flux, and added diagnostic
	outputs of total water fluxes and ice sheet volume.
 * Fixed ice model so that ice thickness isn't accumulated twice on first time-step.

2004-05-19 Ian Rutt
 * Fixed problem with array sizes in glimmer.f90. Here, the size of
	temporary arrays was based on the size of optional arguments,
	which isn't allowed. Replaced them will allocatable arrays.
 * Fixed problem with build system - added glimmer_global_grid.f90

2004-05-17 Ian Rutt
 * Added copy_global_grid subroutine to glimmer_global_grid.f90
 * Added capability to specify grid-box boundaries when initialising model,
 	using optional arguments in initialise_glimmer().
 * Updated documentation.
 * Corrected instance namelist read - forc was absent.
	
2004-05-14 Ian Rutt
 * Added output-masking capability to enable overlapping domains to be
	more easily dealt with.
 * Fixed polar stereographic projection. However, the stereographic
	projections still fail if the pole is in the domain - not sure why.
 * Implemented new, better downscaling-interpolation scheme, which handles
	the presence of a pole better, and take into account the irregular
	shape of the interpolation domain.
 * Added proper default initialisation of top-level glimmer type.
	
2004-05-12 Ian Rutt
 * Removed redundant re_alloc flag argument from proj_allocate subroutine
	in glimmer_project.f90

2004-05-11 Ian Rutt
 * Removed redundant xscale and yscale components from projection type, 
	which were originally set equal to dx and dy. All references to
	them have been changed accordingly.

2004-05-06 Ian Rutt
 * Rationalisation of calc_coverage (glimmer_object.f90), with 
	global grid objects.
 * Minor formatting changes.
 * Completed adding initialisation to derived types and rejigging
	namelist reads to avoid confusion about default values.
 * Coded alternative, hopefully faster calc_coverage routine.
 * Made efficiency alterations to new_upscale code.