@@ -1,3 +1,6 @@
+2004-05-25 Ian Rutt
+ * Added comment to main glimmer subroutine
+
 2004-05-24 Ian Rutt
  * Sorted out input and output arrays of water flux, and added diagnostic
 	outputs of total water fluxes and ice sheet volume.
